--- a/index.html
+++ b/index.html
@@ -18,7 +18,36 @@
 
 <body>
 
+    <div class="login-box">
 
+        <h2>Welcome back</h2>
+        <p>Enter your details</p>
+
+        <form>
+            <div class="form-group">
+                <label for="email">
+                    Email
+                </label>
+                <i class="bx bxs-user"></i>
+                <input type="email" id="email" placeholder="Your email" required>
+            </div>
+            <div class="form-group">
+                <label for="password">
+                    Password
+                </label>
+                <i class="bx bxs-lock"></i>
+                <input type="password" id="password" placeholder="Your password" required>
+            </div>
+
+            <a class="forgot">
+                Forgot your password?
+            </a>
+
+            <input type="submit" value="Log In">
+
+        </form>
+
+    </div>
 
 </body>
 
